# Medyrax-Healthcare-Integration-Platform-V1

./: .gitignore  1  100  DEPLOYMENT.md  README.md  pom.xml
healthbridge-cdk/: cdk.json  package.json  tsconfig.json
healthbridge-cdk/config/: dev.json  prod.json  staging.json
healthbridge-cdk/test/: types.test.ts
integration-tests/: README.md  pom.xml
lambdas/: README.md
lambdas/analytics-connector/: __init__.py  deidentify.py  everything.py  kafka_forwarder.py  pom.xml  requirements.txt
lambdas/cds/: __init__.py  cds_hooks_service.py  cds_trigger.py  pom.xml
lambdas/fhir-engine/: __init__.py  bundle_handler.py  crud.py  fhir_validator.py  pom.xml  requirements.txt  search.py  validate.py
lambdas/file-integration/: __init__.py  file_detector.py  file_exporter.py  file_processor.py  file_validator.py  pom.xml
lambdas/hb-common/: pom.xml
lambdas/hb-data-mapper/: pom.xml
lambdas/healthlake-connector/: __init__.py  export_trigger.py  (+4 more)
lambdas/mdx_common/: __init__.py  constants.py  enums.py  errors.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  tenant_config_service.py
lambdas/mdx_common/tests/: test_models.py  test_pbt_audit_completeness.py  test_pbt_fhir.py  test_pbt_file_quarantine.py  test_pbt_healthlake.py  test_pbt_hl7.py  test_pbt_integration_bus.py  test_pbt_security.py  test_pbt_telehealth.py  test_pbt_tenant_isolation.py  test_pbt_terminology.py  test_tenant_config_service.py
medyrax-cdk/: README.md  cdk.json  package-lock.json  package.json  tsconfig.json
scripts/: README.md  build-all.sh  run-integration-tests.sh
(+119 files in other folders)
