[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mdx-common"
version = "1.0.0"
description = "Medyrax™ Platform — shared Python library for all Lambda functions"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "hypothesis==6.100.0",
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.23.6",
    "mypy==1.10.0",
    "ruff==0.4.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mdx_common*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
